fixed issue where the header image would be distorted on firefox

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,7 +89,7 @@ body {
         width: 40rem;
         max-width: 638px;
         left: 0;
-        height: 100%;
+        max-height: 100%;
         transform: scaleX(-1) rotate(5deg);
         filter: saturate(0%);
         background-color: var(--color-blue-light);
